I have added the comment button to the question page. - I have created a seperated component for that. - And an external css file places in the components folder which is not correct but you may change it, so it is aligned with what convention we use. The submit button on question page, i haved added the hover effect.

--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -222,6 +222,7 @@
   font-size: 12px;
 }
 
+
 .dropdown:hover .dropdown-content {
   display: block;
   margin-top: 2px;
@@ -255,6 +256,11 @@
   font-weight: 800;
   font-size: 16px;
   letter-spacing: 0.12em;
+}
+.submitButton:hover {
+  background: #575fbe;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 
 .newQustion {
